# rofi-proxy

./: CMakeLists.txt  README.md
ci/AUR/: PKGBUILD
example/: advanced_calc.py  advanced_calc_with_combi.sh  custom_keys.py  custom_keys.sh  lines.py  lines.sh  simple_calc.py  simple_calc.sh  sub_modes.py  sub_modes.sh  todo.py  todo.sh  unicode.py  unicode.sh
src/: defer.h  exception.h  json.cpp  json.h  logger.cpp  logger.h  myplugin.cpp  plugin.cpp  process.cpp  process.h  protocol.cpp  protocol.h  proxy.cpp  proxy.h  proxy_base.h  rofi.cpp  rofi.h  utils.h
